--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,6 +52,7 @@ jobs:
       - run:
           name: run tests
           command: |
+            echo `pwd`
             pipenv run ./manage.py test
 
       - store_test_results:
