check for manage.py file

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,6 +53,7 @@ jobs:
           name: run tests
           command: |
             echo `pwd`
+            ls `pwd`
             pipenv run ./manage.py test
 
       - store_test_results:
