--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
       # documented at https://circleci.com/docs/2.0/circleci-images/
       # - image: circleci/postgres:9.4
 
-    working_directory: ~/care-web/careweb/careweb
+    working_directory: ~/care-web
 
     steps:
       - checkout
@@ -52,6 +52,7 @@ jobs:
       - run:
           name: run tests
           command: |
+            cd careweb
             echo `pwd`
             ls `pwd`
             pipenv run ./manage.py test
