create a log file

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,6 +55,7 @@ jobs:
             cd careweb
             echo `pwd`
             ls `pwd`
+            mkdir logs
             pipenv run ./manage.py test
 
       - store_test_results:
