--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,6 +56,7 @@ jobs:
             echo `pwd`
             ls `pwd`
             mkdir logs
+            pipenv run ./manage.py migrate
             pipenv run ./manage.py test
 
       - store_test_results:
