calculate expiry date for subscriptions (used the dateutil module)

--- a/Pipfile
+++ b/Pipfile
@@ -24,6 +24,7 @@ django-hashid-field = "*"
 django-post-office = "*"
 postmarker = "*"
 django-debug-toolbar = "*"
+python-dateutil = "*"
 
 
 [dev-packages]
