--- a/Pipfile
+++ b/Pipfile
@@ -25,6 +25,8 @@ django-post-office = "*"
 postmarker = "*"
 django-debug-toolbar = "*"
 python-dateutil = "*"
+"py3rijndael" = "*"
+pycrypto = "*"
 
 
 [dev-packages]
