--- a/Pipfile
+++ b/Pipfile
@@ -27,6 +27,7 @@ django-debug-toolbar = "*"
 python-dateutil = "*"
 "py3rijndael" = "*"
 pycrypto = "*"
+django-crispy-forms = "*"
 
 
 [dev-packages]
