--- a/Pipfile
+++ b/Pipfile
@@ -7,11 +7,11 @@ name = "pypi"
 
 [packages]
 
-django = "*"
+Django = "*"
 fabric = "*"
 django-baton = "*"
 ipython = "*"
-pillow = "*"
+Pillow = "*"
 django-widget-tweaks = "*"
 requests = "*"
 "psycopg2" = "*"
@@ -25,8 +25,6 @@ django-post-office = "*"
 postmarker = "*"
 django-debug-toolbar = "*"
 python-dateutil = "*"
-"py3rijndael" = "*"
-pycrypto = "*"
 django-crispy-forms = "*"
 
 
