--- a/Pipfile
+++ b/Pipfile
@@ -7,7 +7,6 @@ name = "pypi"
 
 [packages]
 
-django = "*"
 fabric = "*"
 django-baton = "*"
 ipython = "*"
@@ -27,7 +26,8 @@ django-debug-toolbar = "*"
 python-dateutil = "*"
 django-crispy-forms = "*"
 pycryptodome = "*"
-django-constance = {extras = ["database"]}
+django-constance = { extras = [ "database",] }
+django = "==2.2.6"
 
 
 [dev-packages]
