--- a/Pipfile
+++ b/Pipfile
@@ -28,6 +28,7 @@ django-crispy-forms = "*"
 pycryptodome = "*"
 django-constance = { extras = [ "database",] }
 django = "==2.2.6"
+django-easy-audit = "*"
 
 
 [dev-packages]
