Implemented change password on first login for clients registered by rangers

--- a/Pipfile
+++ b/Pipfile
@@ -27,5 +27,6 @@ django-constance = {extras = [ "database",]}
 django = "==2.2.8"
 django-easy-audit = "*"
 django-ratelimit = "*"
+django-excel = "*"
 
 [dev-packages]
