--- a/Pipfile
+++ b/Pipfile
@@ -27,5 +27,8 @@ django-constance = {extras = [ "database",]}
 django = "==2.2.8"
 django-easy-audit = "*"
 django-ratelimit = "*"
+django-excel = "*"
+pyexcel-xls = "*"
+pyexcel-xlsx = "*"
 
 [dev-packages]
