Added lga_id to init/provider and started working on docs

--- a/Pipfile
+++ b/Pipfile
@@ -32,5 +32,7 @@ pyexcel-xls = "*"
 pyexcel-xlsx = "*"
 gunicorn = "*"
 djangorestframework = "*"
+drf-yasg = "*"
+django-rest-framework-docs = "*"
 
 [dev-packages]
